frontend/test/should_fail/dangle_005.grg
using attrib_model_001;

rule r {
	pattern {
		x: Node;
		y: Node;
		x -e:Edge-> y;
	}
	replace{
		<- f:EINT<e> - x;
	}
}
